16/10/2016:
	- Added IIIF 2.1 square region support


29/08/2016:
	- Fix to bug in rotation code for 270 degs introduced when parallelization added.
	- Added test for pkg-config to configure.ac script.


10/08/2016:
	- Update to configure.ac script for OpenJPEG


04/08/2016:
	- Fix to info.json code in IIIF.cc to avoid problems with images containing only
	  one resolution level.
	- Fixed bug in filter_contrast() due to incorrectly calculated buffer size.


08/07/2016:
	- Removed "gray" from IIIF list of supported features - already specified in the
	  qualities list.


07/06/2016:
	- Added fix for API change in get_colour_mapping() function in Kakadu version 7.8


02/06/2016:
	- Type change of counter in filter_contrast to long to avoid overflows with large
	  image exports.


22/03/2016: Version 1.0 Released


08/03/2016:
	- Added sizes field to IIIF JSON responses giving list of exportable pyramid sizes
	  smaller than MAX_CVT.


29/02/2016:
	- Added support for 1 bit bilevel TIFF


11/02/2016:
	- Added backlog parameter support for command line use through --backlog parameter.
	- Fixed several more Coverity scan warnings.


29/01/2016:
	- Minor update to IIPImage.cc to reduce risk of race condition in stat -> fopen calls


28/01/2016:
	- Added ifdefs to Transform.cc to enforce either ivdep for icc or openmp for gcc


15/01/2016:
	- Fixed a series of minor issues identified by Coverity scan


12/01/2016:
	- Added check to JPEGCompressor to reject images that are not 8 bits per channel
	- Added new floatProcessing() function to View.h to simplify code in JTL and CVT


06/01/2016:
	- Added extra parameter check for incoherent region sizes for IIIF protocol


21/12/2015:
	- Fixed infinite loop in View::calculateResolution if requested size = 0. Set
	  minimum output size to 1px.


07/09/2015:
	- Fixed isfinite autoconf macro in acinclude.m4 to force float type


06/08/2015:
	- Added timestamp check and metadata reload for images that have been modified