@@ -1,3 +1,8 @@
+18/11/2016:
+	- Modified IIIF.cc to respect aspect ratio when only width or height size
+	  parameter is given and size exceeds server max CVT limit.
+
+
 16/10/2016:
 	- Added IIIF 2.1 square region support
 
